@@ -392,7 +392,7 @@ void synthv1_lv2::qapp_instantiate (void)
 {
 	if (qApp == nullptr && g_qapp_instance == nullptr) {
 		static int s_argc = 1;
-		static const char *s_argv[] = { __func__, nullptr };
+		static const char *s_argv[] = { SYNTHV1_TITLE, nullptr };
 		g_qapp_instance = new QApplication(s_argc, (char **) s_argv);
 	}
 
