@@ -1,7 +1,7 @@
 // synthv1widget_lv2.cpp
 //
 /****************************************************************************
-   Copyright (C) 2012-2019, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2012-2020, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -119,9 +119,6 @@ synthv1_ui *synthv1widget_lv2::ui_instance (void) const
 void synthv1widget_lv2::setExternalHost ( LV2_External_UI_Host *external_host )
 {
 	m_external_host = external_host;
-
-	if (m_external_host && m_external_host->plugin_human_id)
-		synthv1widget::setWindowTitle(m_external_host->plugin_human_id);
 }
 
 const LV2_External_UI_Host *synthv1widget_lv2::externalHost (void) const
